# Slide_Editor

./: CMakeLists.txt  README.md  applic.json  applic1.json  help.txt  main.cpp  some.pro
Cantroler/inc/: Cantroler.h  controler.h
Cantroler/inc/Add/: add.h
Cantroler/src/: controler.cpp
Dacument/Editor/inc/: editor.h
Dacument/inc/: dacument.h  dacumet.h
Dacument/inc/Slide/: item.h  page.h  slide.h  types.h
Dacument/inc/Slide_Collection/: Slide_Collection.h
Dacument/inc/Slide_Collection/Slide/: Slide.h
Dacument/inc/Slide_Collection/Slide/Item/: circle.h  interface.h  line.h  orthogonal.h  text.h
Dacument/slideMeneger/: slideMeneger.cpp  slideMeneger.h
Dacument/slideMeneger/Editor/: editor.cpp  editor.h
Dacument/src/: ithem.cpp  page.cpp  slide.cpp  types.cpp
Dacument/src/Slide_Collection/: Slide_Collection.cpp
Dacument/src/Slide_Collection/Slide/: Slide.cpp
Dacument/src/Slide_Collection/Slide/Item/: circle.cpp  interface.cpp  line.cpp  ortogonal.cpp
UI/CLI/inc/: cli.h
UI/CLI/inc/Parser/: comand.h  comandCreate.h  lexer.h  parser.h  syntaxsAnalizer.h  types.h
UI/CLI/src/Parser/: ComandCreate.cpp  comand.cpp  lexer.cpp  parser.cpp  syntaxsAnalizert.cpp
application/: application.cpp  application.h
application/Dacument/Editor/: Action.cpp  Action.h  editor.cpp  editor.h
application/Dacument/Sterializer/: Sterializer.cpp  Sterializer.h
application/Dacument/inc/: dacument.h
application/Dacument/inc/Slide/: item.h  page.h  slide.h  types.h
application/Dacument/src/: ithem.cpp  page.cpp  slide.cpp  types.cpp
application/Logger/inc/: logger.h  outoutDivace.h
application/Logger/src/: logger.cpp  outoutDivace.cpp
application/UI/CLI/: cli.h  types.h
application/UI/CLI/Cantroler/inc/: controler.h
application/UI/CLI/Cantroler/src/: controler.cpp
application/UI/CLI/ComandFactory/inc/: comand.h  comandCreate.h
application/UI/CLI/ComandFactory/src/: ComandCreate.cpp  comand.cpp
application/UI/CLI/Parser/inc/: lexer.h  parser.h  syntaxsAnalizer.h
application/UI/CLI/Parser/src/: lexer.cpp  parser.cpp  syntaxsAnalizert.cpp
application/UI/CLI/SemanticAnalizer/inc/: semanticAnaliz.h  semanticFactory.h
application/UI/CLI/SemanticAnalizer/src/: semanticAnaliz.cpp  semanticFactory.cpp
application/Visualizetion/: visualizer.cpp  visualizer.h
application/Visualizetion/Shape/: shape.cpp  shape.h
application/Visualizetion/ShapeFactory/: shapefactory.cpp  shapefactory.h
debug/: Application  CMakeCache.txt  Makefile  SlideEditor  cmake_install.cmake
